# frontpage

./: .dockerignore  .gitignore  Dockerfile  README.md  bulk_run.sh  docker-compose.yml  pyproject.toml  requirements.txt  runner.sh
database/: Dockerfile  mysql.cnf
database/scripts/: create_table.sql  populate_db.sh
src/gutensearch/: __init__.py  bulk.py  database.py  exceptions.py  search.py
