[build-system]
requires = ["setuptools>65", "setuptools_scm>8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["gutensearch"]

[project]
name = "gutensearch"
version = "1.0"
description = "Get word frequencies from a Project Gutenberg book."
authors = [
  {name = "Daniel Torkelson", email = "dtorkelson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "tqdm"
]

[project.scripts]
gutensearch = "gutensearch:main"

[tool.setuptools_scm]
