[build-system]
requires = ["setuptools>65"]
build-backend = "setuptools.build_meta"

[project]
name = "gutensearch"
version = "1.0"
description = "Get word frequencies from a Project Gutenberg book."
authors = [
  {name = "Daniel Torkelson", email = "dtorkelson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mysql-connector-python",
  "requests",
  "pandas",
  "nltk"
]

[project.scripts]
gutensearch = "gutensearch:main"
